--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,302 @@
-.App {
+/* FONT */
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Great+Vibes&family=Nunito:wght@300;400;500;600;700;800;900&family=Playfair:ital,wght@0,300;0,400;0,600;0,800;1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,500&family=Source+Sans+3:wght@300;400;500;600;700&family=Ubuntu:wght@300;400;500;700&display=swap');
+
+/* GOLBAL RULES */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Nunito', sans-serif;
+}
+
+:root {
+  --main-color: #35155D;
+  --second-color: #435334;
+  --hover-color: #8CABFF;
+  --light: #fff;
+  --main-transition: .4s all ease;
+  --radius: 5px
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  margin: 0 50px;
+  /* background-color: red    ; */
+}
+
+@media (max-width:500px) {
+  .container {
+    margin: 0 20px;
+  }
+}
+
+/*   HEADER STYLING   */
+
+header {
+
+  background-color: var(--main-color);
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0
+}
+
+.header ul {
+  display: flex;
+  align-items: center;
+}
+
+.header ul li:not(:last-child) {
+  margin-right: 20px;
+}
+
+.header a {
+  font-size: 22px;
+  cursor: pointer;
+  color: var(--light);
+  transition: var(--main-transition);
+}
+
+.header a:hover {
+  color: var(--hover-color);
+}
+
+.header i {
+  color: var(--light);
+  font-size: 30px;
+  cursor: pointer;
+  transition: var(--main-transition);
+  display: none;
+}
+
+.header i:hover {
+  color: var(--hover-color);
+}
+
+
+@media (max-width: 500px) {
+  .header ul {
+    display: none;
+  }
+
+  .header i {
+    display: block;
+  }
+}
+
+ul.block {
+  display: block;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  background-color: #512B81;
+  width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul.block li:not(:last-child) {
+  border-bottom: 1px solid var(--light);
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+ul.block li {
+  padding: 10px 0;
+}
+
+ul.block li a {
+  color: var(--light);
+}
+
+/*   ADD COMPONENT STLING   */
+
+.add input {
+  outline: none;
+  border: 1px solid var(--main-color);
+  padding: 10px;
+  width: 70%;
+  display: block;
+  margin: 50px auto;
+  border-radius: var(--radius);
+  font-size: 20px;
+  color: var(--light);
+  background-color: var(--main-color);
+  transition: var(--main-transition);
+}
+
+.add input:focus {
+  background-color: transparent;
+  color: var(--main-color);
+}
+
+/*   FILM COMPONENT STYLING    */
+.all-movies {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+.film-container {
+  position: relative;
+  background: var(--main-color);
+  display: flex;
+  gap: 10px;
+  color: var(--light);
+  padding: 10px;
+  border-radius: var(--radius);
+  width: 409px;
+  transition: var(--main-transition);
+
+}
+
+.poster img,
+.img-poster {
+  width: 100px;
+  height: 160px;
+  border-radius: var(--radius);
+}
+
+.poster {
+  width: 100px;
+  height: 160px;
+}
+
+.info .year {
+  margin-top: 10px;
+  transition: var(--main-transition);
+}
+
+.info .title {
+  transition: var(--main-transition);
+
+}
+
+.film-container:hover {
+  background-color: var(--second-color);
+}
+
+.buttons {
+  position: absolute;
+  display: flex;
+  bottom: 10px;
+  left: 118px;
+  gap: 10px;
+}
+
+.buttons button {
+  background-color: #0C356A;
+  padding: 10px;
+  border: none;
+  border-radius: var(--radius);
+  color: var(--light);
+  font-size: 14px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.buttons button.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+/* WATCHLIST LIST COMPONENT SRTYLING */
+.watchlist .headre-watchlist {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 40px 0;
+}
+
+.watchlist .headre-watchlist span {
+  background-color: var(--main-color);
+  color: var(--light);
+  padding: 5px 10px;
+  border-radius: var(--radius);
+  font-weight: bold;
+}
+
+.watchlist h2.nofilms {
+  text-align: center;
+  font-size: 60px;
+  color: #9999;
+  margin-top: 100px;
+}
+@media(max-width: 950px){
+  .watchlist h2.nofilms {
+    font-size: 50px;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media(max-width: 750px){
+  .watchlist h2.nofilms {
+    font-size: 40px;
+  }
+}
+@media(max-width: 650px){
+  .watchlist h2.nofilms {
+    font-size: 30px;
+  }
+}
+.all-movies-watchlist {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 15px;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.all-movies-watchlist img {
+  width: 300px;
+  height: 230px;
+  border: 3px solid transparent;
+  transition: var(--main-transition);
+  border-radius: var(--radius);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* CONTROLS COMPONENT STYLING */
+.watch-item{
+  position: relative;
 }
+.controls{
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translatex(-50%);
+  color: var(--light);
+  font-size: 30px;
+  background: #000000c7;
+  width: fit-content;
+  border-radius: var(--radius);
+  padding: 5px 10px;  
+  display: none;
+  transition: var(--main-transition);
+}
+.controls i{
+  cursor: pointer;
+  transition: var(--main-transition);
+  margin: 0 10px;
+}
+
+.container i:hover{
+  color: var(--hover-color);
+}
+
+.watch-item:hover img{
+  border: 3px solid var(--hover-color);
+}
+.watch-item:hover .controls{
+display: block;}
